Makefile: Add `checkprotos` target.
Signed-off-by: Andrea Luzzardi <aluzzardi@gmail.com>

--- a/circle.yml
+++ b/circle.yml
@@ -39,4 +39,4 @@ test:
 
         # Run generate *only* once all tests pass with checked-in generated
         # code.
-        - cd "$WORKDIR" && make generate
+        - cd "$WORKDIR" && make checkprotos
