Use {running, fill, batch} as mode string in yml.
Signed-off-by: Dong Chen <dongluo.chen@docker.com>

--- a/examples/service/ping.yml
+++ b/examples/service/ping.yml
@@ -2,6 +2,6 @@ name: ping
 image: alpine
 command: ["sh", "-c", "ping $HOST"]
 instances: 2
-mode: SERVICE_MODE_RUNNING
+mode: running
 env:
  - HOST=google.com
