--- a/examples/service/vol_bind.yml
+++ b/examples/service/vol_bind.yml
@@ -1,7 +1,7 @@
 name: web
 image: nginx
 instances: 1
-mode: SERVICE_MODE_RUNNING
+mode: running
 mounts:
   - target: /data
     source: /home/docker
