Move Fill service tasks thru allocator and scheduler.
Signed-off-by: Dong Chen <dongluo.chen@docker.com>

--- a/examples/cadvisor.yml
+++ b/examples/cadvisor.yml
@@ -4,7 +4,7 @@ namespace: monitoring
 services:
     cadvisor:
         image: google/cadvisor:v0.22.0
-        instances: 2
+        mode: fill
         update:
             parallelism: 1
             delay: 10s
