Add Container to hold container specific task data
Right now all container runtime specific task data such as network
attachments and endpoint information is directly stored in task. Instead
it should inside a container runtime specific message so that we can add
other runtimes later without changing the model.

Signed-off-by: Jana Radhakrishnan <mrjana@docker.com>

--- a/examples/hello-world.yml
+++ b/examples/hello-world.yml
@@ -4,7 +4,6 @@ namespace: hello-world
 services:
   ping:
       image: alpine
-      command: ["sh", "-c", "ping $HOST"]
-      env:
-          - HOST=google.com
+      command: ["sh", "-c", "ping google.com"]
+      networks: ["foo"]
       instances: 2
