Add a "restart" subsection to the service spec YAML
This groups the related restart parameters together. The restart
conditions now go under an "on" key. The conditions
"always"/"on-failure"/"never" are renamed to "any"/"failure"/"none" to
avoid confusing people with "always" (which is subject to constraints
like the maximum number of attempts.

Signed-off-by: Aaron Lehmann <aaron.lehmann@docker.com>

--- a/examples/reference.yml
+++ b/examples/reference.yml
@@ -16,10 +16,11 @@ services:
         # number of instances for a running service.
         instances: 3
         # restart policy
-        restart: always
-        restartdelay: 10s
-        maxrestartattempts: 5
-        restartwindow: 60s
+        restart:
+            on: any
+            delay: 10s
+            attempts: 5
+            window: 60s
         # update strategy (rolling updates)
         update:
             parallelism: 1
