--- a/examples/cadvisor.yml
+++ b/examples/cadvisor.yml
@@ -4,7 +4,7 @@ namespace: monitoring
 services:
     cadvisor:
         image: google/cadvisor:v0.22.0
-        mode: fill
+        mode: global
         update:
             parallelism: 1
             delay: 10s
