--- a/examples/hello-world.yml
+++ b/examples/hello-world.yml
@@ -6,3 +6,6 @@ services:
       image: alpine
       command: ["sh", "-c", "ping google.com"]
       instances: 2
+      placement:
+          constraints:
+              - node.name!=node-2
