Add support for more volume options
This adds support for the following options currently supported in
Docker:

- Propagation = Sets mount propagation (e.g. `-v /foo:/bar:rshared`)
- Populate = Populate volume with image path content (e.g. `-v
  name:/foo:nocopy`), but flips the default to not copy
- MCSAccessMode = Set MCS label access mode (e.g. `-v /foo:/bar:Z`)

Also changes `Mask` to `Writable` and makes it a bool instead of a
string.

Signed-off-by: Brian Goff <cpuguy83@gmail.com>

--- a/examples/cadvisor.yml
+++ b/examples/cadvisor.yml
@@ -16,16 +16,13 @@ services:
             - type: bind
               source: /
               target: /rootfs
-              mask: ro
             - type: bind
               source: /var/run
               target: /var/run
-              mask: rw
+              writable: true
             - type: bind
               source: /sys
               target: /sys
-              mask: ro
             - type: bind
               source: /var/lib/docker/
               target: /var/lib/docker
-              mask: ro
