--- a/codecov.yml
+++ b/codecov.yml
@@ -8,3 +8,6 @@ coverage:
         enabled: yes
         target: 0
     changes: false
+  ignore:  # ignore the api package for coverage since it's all generated'
+    - "api/*.pb.go"
+    - "vendor/*"
