--- a/circle.yml
+++ b/circle.yml
@@ -3,7 +3,7 @@ machine:
         OS: "linux"
         ARCH: "amd64"
 
-        PROTOC: "https://github.com/google/protobuf/releases/download/v3.0.0-beta-2/protoc-3.0.0-beta-2-linux-x86_64.zip"
+        PROTOC: "https://github.com/google/protobuf/releases/download/v3.0.2/protoc-3.0.2-linux-x86_64.zip"
 
         GOVERSION: "1.7"
         GOPATH: "$HOME/.go_workspace"
@@ -32,7 +32,7 @@ dependencies:
 
         # Install protoc
         - wget "$PROTOC"
-        - unzip -o "$(basename $PROTOC)" -d "$HOME/bin"
+        - unzip -o "$(basename $PROTOC)" -d "$HOME"
 
         # Setup the GOPATH
         - mkdir -p "$(dirname $WORKDIR)"
