vendor: update grpc to v1.0.2
It includes some minor fixes. Also, it makes possible to use
DialContext.

Also, this commit removes packages which contain only LICENSE file - it's new
feature in vndr.

Signed-off-by: Alexander Morozov <lk4d4math@gmail.com>

--- a/vendor.conf
+++ b/vendor.conf
@@ -1,5 +1,5 @@
 # grpc and protobuf
-google.golang.org/grpc v1.0.1-GA
+google.golang.org/grpc v1.0.2
 github.com/gogo/protobuf v0.3
 github.com/golang/protobuf 3c84672111d91bb5ac31719e112f9f7126a0e26e
 github.com/matttproud/golang_protobuf_extensions v1.0.0
