vendor: update testify to v1.1.4
It fixes errors reporting when using pkg/errors + testify.
Also it includes NOTICE files which recent vndr version keeps because
they're necessary for satisfying Apache2 license.

Signed-off-by: Alexander Morozov <lk4d4math@gmail.com>

--- a/vendor.conf
+++ b/vendor.conf
@@ -43,7 +43,7 @@ github.com/pmezard/go-difflib 792786c7400a136282c1664665ae0a8db921c6c2
 github.com/rcrowley/go-metrics 51425a2415d21afadfd55cd93432c0bc69e9598d
 github.com/spf13/cobra 8e91712f174ced10270cf66615e0a9127e7c4de5
 github.com/spf13/pflag 7f60f83a2c81bc3c3c0d5297f61ddfa68da9d3b7
-github.com/stretchr/testify 9f9027faeb0dad515336ed2f28317f9f8f527ab4
+github.com/stretchr/testify v1.1.4
 golang.org/x/crypto 3fbbcd23f1cb824e69491a5930cfeff09b12f4d2
 golang.org/x/net 024ed629fd292398cfd43c9678a5bf004f7defdc
 golang.org/x/sys 5eaf0df67e70d6997a9fe0ed24383fa1b01638d3
