Use go-digest package
Switch from github.com/docker/distribution/digest to
github.com/opencontainers/go-digest.

Vendor a new version of github.com/docker/distribution that uses
go-digest.

Signed-off-by: Aaron Lehmann <aaron.lehmann@docker.com>

--- a/vendor.conf
+++ b/vendor.conf
@@ -13,7 +13,7 @@ github.com/prometheus/client_model fa8ad6fec33561be4280a8f0514318c79d7f6cb6
 github.com/prometheus/common ebdfc6da46522d58825777cf1f90490a5b1ef1d8
 github.com/prometheus/procfs abf152e5f3e97f2fafac028d2cc06c1feb87ffa5
 
-github.com/docker/distribution 7230e9def796c63a4033211dc5107742d689fc1e
+github.com/docker/distribution 7dba427612198a11b161a27f9d40bb2dca1ccd20
 github.com/docker/docker 0fb0d67008157add34f1e11685e23a691db92644
 github.com/docker/go-connections 34b5052da6b11e27f5f2e357b38b571ddddd3928
 github.com/docker/go-events 37d35add5005832485c0225ec870121b78fcff1c
@@ -21,6 +21,7 @@ github.com/docker/go-units 954fed01cc617c55d838fa2230073f2cb17386c8
 github.com/docker/libkv 9fd56606e928ff1f309808f5d5a0b7a2ef73f9a8
 github.com/docker/libnetwork 3ab699ea36573d98f481d233c30c742ade737565
 github.com/opencontainers/runc 8e8d01d38d7b4fb0a35bf89b72bc3e18c98882d7
+github.com/opencontainers/go-digest a6d0ee40d4207ea02364bd3b9e8e77b9159ba1eb
 
 github.com/davecgh/go-spew 5215b55f46b2b919f50a1df0eaa5886afe4e3b3d
 github.com/Microsoft/go-winio f778f05015353be65d242f3fedc18695756153bb
